--- a/backend/app/views/spree/admin/shared/_user_menu_modal.html.erb
+++ b/backend/app/views/spree/admin/shared/_user_menu_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- Modal -->
-<div class="modal fade" id="myModal" role="dialog">
+<div class="modal fade" id="userNavModal" role="dialog">
   <div class="modal-dialog">
     <!-- Modal content-->
     <div class="modal-content">
