--- a/backend/app/views/spree/admin/shared/_content_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_content_header.html.erb
@@ -2,7 +2,7 @@
   <div class="content-header <%= "with-page-tabs" if content_for?(:page_tabs) %> page-header">
     <div class="row">
       <% if content_for?(:page_title) %>
-        <h1 class="col-xs-12 col-md-<%= content_for?(:page_actions) ? '6' : '12'  %>">
+        <h1 class="col-xs-<%= content_for?(:page_actions) ? '6' : '12'  %>">
           <%= yield :page_title %>
           <% if content_for?(:page_title_small) %>
             <small><%= yield :page_title_small %></small>
@@ -11,8 +11,9 @@
       <% end %>
 
       <% if content_for?(:page_actions) %>
-        <div class="page-actions col-xs-12 col-md-6" data-hook="toolbar">
+        <div class="page-actions col-xs-6" data-hook="toolbar">
           <%= yield :page_actions %>
+          <a type="button" id="toggle-dynamic-content-menu" class="btn btn-default hidden-md hidden-lg"><span class="icon icon-list-alt"></span> <%= Spree.t(:options) %></a>
         </div>
       <% end %>
 
