--- a/backend/app/views/spree/admin/shared/_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_header.html.erb
@@ -3,15 +3,15 @@
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="row">
-        <div class="navbar-header col-xs-4 hidden-sm hidden-lg hidden-md">
+        <div class="navbar-header col-xs-4 hidden-md hidden-lg">
             <span class="navbar-toggle" id="sidebar-toggle">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </span>
         </div>
-        <div class="navbar-center col-xs-4 col-sm-6">
-          <div class="center-xs">
+        <div class="navbar-center col-xs-4 col-md-6">
+          <div class="center-xs center-sm">
             <%= link_to(
               image_tag(Spree::Config[:admin_interface_logo], id: 'logo'),
               spree.admin_path,
@@ -19,7 +19,7 @@
             ) %>
           </div>
         </div>
-        <div class="col-xs-4 col-sm-6">
+        <div class="col-xs-4 col-md-6">
           <div class="navbar-right">
             <%= render partial: 'spree/admin/shared/account_nav' %>
           </div>
