--- a/backend/app/views/spree/admin/shared/_sidebar.html.erb
+++ b/backend/app/views/spree/admin/shared/_sidebar.html.erb
@@ -1,6 +1,5 @@
 <% if content_for?(:sidebar) %>
-<button type="button" id="sidebar-options" class="btn btn-default visible-xs visible-sm" data-toggle="collapse" data-target="#sidebar"><span class="icon icon-list-alt"></span> <%= Spree.t(:options) %></button>
-  <aside id="sidebar" class="main-right-sidebar hidden-xs hidden-sm visable-md visable-lg" data-hook>
+  <aside id="sidebar" class="main-right-sidebar" data-hook>
     <%= yield :sidebar %>
   </aside>
 <% end %>
