--- a/backend/app/views/spree/admin/shared/_content_header.html.erb
+++ b/backend/app/views/spree/admin/shared/_content_header.html.erb
@@ -2,7 +2,7 @@
   <div class="content-header <%= "with-page-tabs" if content_for?(:page_tabs) %> page-header">
     <div class="row">
       <% if content_for?(:page_title) %>
-        <h1 class="col-xs-<%= content_for?(:page_actions) ? '6' : '12'  %>">
+        <h1 class="col-xs-<%= content_for?(:page_actions) || content_for?(:sidebar) ? '6' : '12'  %>">
           <%= yield :page_title %>
           <% if content_for?(:page_title_small) %>
             <small><%= yield :page_title_small %></small>
@@ -10,12 +10,15 @@
         </h1>
       <% end %>
 
-      <% if content_for?(:page_actions) %>
+      <% if content_for?(:page_actions) || content_for?(:sidebar) %>
         <div class="page-actions col-xs-6" data-hook="toolbar">
           <%= yield :page_actions %>
-          <a type="button" id="toggle-dynamic-content-menu" class=" <%= content_for?(:sidebar) ? 'btn btn-default hidden-md hidden-lg' : 'hidden'  %>"><span class="icon icon-list-alt"></span> <%= Spree.t(:options) %></a>
+          <% if content_for?(:sidebar) %>
+          <a type="button" id="toggle-dynamic-content-menu" class="btn btn-default hidden-md hidden-lg"><span class="icon icon-list-alt"></span> <%= Spree.t(:options) %></a>
+          <% end %>
         </div>
       <% end %>
+
 
       <% if content_for?(:page_tabs) %>
         <ul class="nav nav-tabs">
