--- a/backend/app/assets/stylesheets/spree/backend/shared/_new_ui.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_new_ui.scss
@@ -22,6 +22,7 @@ span#sidebar-toggle {
 
 .content-header.page-header {
   margin-top: 0;
+  margin-bottom: 10px;
   text-align: left;
 }
 
@@ -313,5 +314,14 @@ div.navbar-right {
       .navbar-nav {
         margin: 7.5px -15px;
       }
+      div.page-actions{
+      text-align: center !important;
+      position: fixed;
+      bottom: 0;
+      z-index: 999;
+      margin-left: -5px;
+      background: white;
+      border-top: 1px solid tan;
+    }
 
 }
