--- a/backend/app/assets/stylesheets/spree/backend/shared/_new_ui.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_new_ui.scss
@@ -1,130 +1,3 @@
-[role="button"],
-input,
-label,
-select,
-textarea,
-a,
-button {
-  touch-action: manipulation;
-}
-
-img {
-  max-width: 100%;
-}
-
-td.image img {
-  max-width: 50px;
-}
-
-span#sidebar-toggle {
-  display: none;
-}
-
-.content-header.page-header {
-  margin-top: 0;
-  margin-bottom: 10px;
-}
-
-.content-header.page-header h1 {
-  text-align: left;
-}
-
-a:focus {
-  outline: 0;
-}
-
-aside#sidebar {
-  background-color: white;
-  padding: 10px;
-  border: 1px solid $input-border;
-  border-radius: $ui-border-radius;
-  margin-right: -15px;
-}
-
-#sidebar-toggle {
-  width: 30px;
-  height: 30px;
-  padding: 5px;
-  margin-top: 15px;
-}
-
-#main-sidebar {
-  width: $sidebar-width;
-  overflow-y: scroll;
-  top: 51px;
-}
-
-#main-part {
-  padding-left: $sidebar-width + 35;
-}
-
-body,
-div#main-part,
-div#main-sidebar {
-  background-color: $ui-background-color;
-}
-
-div#content {
-  background-color: $panel-background-color;
-  border: 1px solid $input-border;
-  padding: 15px;
-  border-radius: $ui-border-radius;
-  overflow-x: scroll;
-}
-
-.navbar-inverse {
-  background-color: $nav-background-color;
-  border-color: $input-border;
-}
-
-.navbar-inverse .navbar-nav > li > a {
-  color: #555555 !important;
-}
-
-.navbar-inverse .navbar-nav > .open > a,
-.navbar-inverse .navbar-nav > .open > a:focus,
-.navbar-inverse .navbar-nav > .open > a:hover {
-  background-color: #ddd;
-}
-
-.navbar-inverse .navbar-toggle:focus,
-.navbar-inverse .navbar-toggle:hover {
-  background-color: $nav-background-color;
-}
-
-.navbar-inverse .navbar-toggle .icon-bar {
-  background-color: #555;
-}
-
-.content-header.page-header .page-actions form {
-  margin: 2px 0;
-}
-
-div#test p:first-child {
-  text-decoration: underline;
-}
-
-div#test p:last-child {
-  color: red;
-}
-
-table#listing_orders tr {
-  height: 48px;
-}
-
-div.navbar-right {
-  float: right !important;
-  margin-right: -15px;
-}
-
-.pagination {
-  margin: 0;
-}
-
-.page-header {
-  margin: 40px -15px 20px;
-  padding-bottom: 0;
-}
 
 @media (max-width: 991px) {
   #close-dynamic-content-menu {
@@ -266,7 +139,7 @@ div.navbar-right {
   }
 
   #main-sidebar ul.nav.nav-pills li a {
-    padding: 15px;
+    padding: 15px 0 15px 43px;
     font-size: 12px;
   }
 
