--- a/backend/app/views/spree/admin/shared/_user_menu_modal.html.erb
+++ b/backend/app/views/spree/admin/shared/_user_menu_modal.html.erb
@@ -61,7 +61,7 @@
         <% end %>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal"><%= Spree.t(:close) %></button>
+                  <%= render partial: 'spree/admin/shared/version' %>
       </div>
     </div>
 
